k8s/infra/rancher/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.rancher.local.irishlab.io`)
      kind: Rule
      services:
        - name: rancher
          port: 80
    - match: Host(`rancher.local.irishlab.io`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: networking
      services:
        - name: rancher
          port: 80
